update module terraform & headscale

--- a/ansible/playbooks/ansible.cfg
+++ b/ansible/playbooks/ansible.cfg
@@ -1,8 +1,9 @@
 [defaults]
-#inventory      = /home/leroy/hosts.ini
+inventory      = $URSAOPS_ROOT/ansible/inventory/hosts.ini
+roles_path     = $URSAOPS_ROOT/ansible/roles
 remote_tmp     = $HOME/.ansible/tmp
 
-nocolor = 1
+nocolor        = 1
 forks          = 150
 sudo_user      = root
 transport      = smart
