--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,17 @@
 # Created by https://www.toptal.com/developers/gitignore/api/ansible,terraform,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=ansible,terraform,python
 
-## Secret
-ansible/vault/*
+## Additionals
 .vscode
-*.pem
-*.p12
-*.artifacts.*
-*.env
+.pem
+.p12
+
 
 ### Ansible ###
 *.retry
 *.ini
+ansible/vault/
+ansible/artifacts/
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
@@ -52,25 +52,6 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
 # Django stuff:
 *.log
 local_settings.py
@@ -98,31 +79,8 @@ target/
 profile_default/
 ipython_config.py
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
+.python-version
 .pdm.toml
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
@@ -222,7 +180,11 @@ override.tf.json
 terraform.rc
 .terraform
 .terraform.*
-*.tfstate
-*.tfstate.*
+.tfstate
+.tfstate.*
 
 # End of https://www.toptal.com/developers/gitignore/api/ansible,terraform,python
+ansible/inventory/*
+ansible/roles/headscale/files/pre_auth_keys.yml
+ansible/roles/headscale/files/routes.yml
+terraform/engagement_2/*
