--- a/ansible/roles/headscale/files/nodes.yml
+++ b/ansible/roles/headscale/files/nodes.yml
@@ -1,6 +1,10 @@
 ip_tailscale:
-  - { hostname: "c2server", ip: "100.64.0.1", user: "c2server" }
-  - { hostname: "redirhttps", ip: "100.64.0.2", user: "redirector" }
-  - { hostname: "parrot", ip: "100.64.0.3", user: "jumphost" }
-  - { hostname: "ip-172-31-24-47", ip: "100.64.0.4", user: "redirector" }
-  - { hostname: "ip-172-31-30-214", ip: "100.64.0.5", user: "phishsrv" }
+  - hostname: "c2srv"
+    ip: "100.64.0.1"
+    user: "c2srv"
+  - hostname: "dns"
+    ip: "100.64.0.2"
+    user: "redir"
+  - hostname: "https"
+    ip: "100.64.0.3"
+    user: "redir"
