--- a/ansible/roles/headscale/tasks/client.yml
+++ b/ansible/roles/headscale/tasks/client.yml
@@ -1,44 +1,47 @@
 ---
 - name: Set pre_auth_key for redirector group
   set_fact:
-    pre_auth_key: "{{ pre_auth['redirector'] }}"
-  when: inventory_hostname == redirector.https
-
-- name: Set pre_auth_key for redirector group
-  set_fact:
-    pre_auth_key: "{{ pre_auth['redirector'] }}"
-  when: inventory_hostname == redirector.dns
-
-- name: Set pre_auth_key for redirector group
-  set_fact:
-    pre_auth_key: "{{ pre_auth['redirector'] }}"
-  when: inventory_hostname == redirector.phish
+    pre_auth_key: "{{ redir }}"
+  when: 
+    - redirector[item] is defined
+    - inventory_hostname in redirector[item] or inventory_hostname == redirector[item]
+  loop:
+    - https
+    - dns
+    - phish
+  loop_control:
+    label: "{{ item }}"
 
 - name: Set pre_auth_key for c2server
   set_fact:
-    pre_auth_key: "{{ pre_auth['c2server'] }}"
-  when: inventory_hostname == c2_machine
+    pre_auth_key: "{{ c2srv }}"
+  when:
+    - c2_machine is defined 
+    - inventory_hostname in c2_machine or inventory_hostname == c2_machine
 
 - name: Set pre_auth_key for phishserver
   set_fact:
-    pre_auth_key: "{{ pre_auth['phishsrv'] }}"
-  when: inventory_hostname == phish_machine
+    pre_auth_key: "{{ phishsrv }}"
+  when:
+    - phish_machine is defined 
+    - inventory_hostname in phish_machine or inventory_hostname == phish_machine
 
 - name: Set pre_auth_key for siem
   set_fact:
-    pre_auth_key: "{{ pre_auth['siem'] }}"
+    pre_auth_key: "{{ siem }}"
   when: inventory_hostname == 'siem'
 
 - name: Set pre_auth_key for jumphost
   set_fact:
-    pre_auth_key: "{{ pre_auth['jumphost'] }}"
+    pre_auth_key: "{{ jumphost }}"
   when: inventory_hostname == 'jumphost'
 
 - name: Display pre_auth_key
   debug:
     msg: "{{ pre_auth_key }}"
+  when: pre_auth_key is defined
 
 - name: Connect the client to headscale controlplane
   command:
-    cmd: "tailscale up --login-server {{ url }} --authkey {{ pre_auth_key }}"
+    cmd: "tailscale up --login-server {{ url }} --authkey {{ pre_auth_key }} --accept-routes"
   when: pre_auth_key is defined
