--- a/ansible/roles/c2_havoc/tasks/teamserver.yml
+++ b/ansible/roles/c2_havoc/tasks/teamserver.yml
@@ -1,31 +1,31 @@
 ---
-# - name: Ensure make is installed
-#   apt:
-#     name: make
-#     state: present
-#   become: yes
+- name: Ensure make is installed
+  apt:
+    name: make
+    state: present
+  become: yes
 
-# - name: Ensure havoc directory exists
-#   file:
-#     path: "{{ item }}"
-#     state: directory
-#   with_items:
-#     - "{{ path_havoc }}"
-#     - "{{ path_havoc }}/profiles"
-#   register: directory_check
+- name: Ensure havoc directory exists
+  file:
+    path: "{{ item }}"
+    state: directory
+  with_items:
+    - "{{ path_havoc }}"
+    - "{{ path_havoc }}/profiles"
+  register: directory_check
 
-# - name: Set a fact if both directories are present
-#   set_fact:
-#     all_dirs_exist: true
-#   when:
-#     - "'{{ path_havoc }}' in directory_check.results[0].path and directory_check.results[0].state == 'directory'"
-#     - "'{{ path_havoc }}/profiles' in directory_check.results[1].path and directory_check.results[1].state == 'directory'"
+- name: Set a fact if both directories are present
+  set_fact:
+    all_dirs_exist: true
+  when:
+    - "'{{ path_havoc }}' in directory_check.results[0].path and directory_check.results[0].state == 'directory'"
+    - "'{{ path_havoc }}/profiles' in directory_check.results[1].path and directory_check.results[1].state == 'directory'"
 
-# - name: Build Havoc using Makefile
-#   make:
-#     chdir: "{{ path_havoc }}"
-#     target: ts-build
-#   when: all_dirs_exist | default(false)
+- name: Build Havoc using Makefile
+  make:
+    chdir: "{{ path_havoc }}"
+    target: ts-build
+  when: all_dirs_exist | default(false)
 
 - name: Generate Havoc teamserver service
   template:
