--- a/ansible/roles/headscale/files/nodes.yml
+++ b/ansible/roles/headscale/files/nodes.yml
@@ -8,3 +8,9 @@ ip_tailscale:
   - hostname: "https"
     ip: "100.64.0.3"
     user: "redir"
+  - hostname: "phish"
+    ip: "100.64.0.4"
+    user: "redir"
+  - hostname: "phishsrv"
+    ip: "100.64.0.5"
+    user: "phishsrv"
