--- a/ansible/roles/apache2/tasks/setup.yml
+++ b/ansible/roles/apache2/tasks/setup.yml
@@ -1,11 +1,4 @@
 ---
-- name: Add DNS entry to /etc/hosts
-  lineinfile:
-    path: /etc/hosts
-    line: "srv.local {{ local_ip_phishsrv }}"
-    regexp: '^srv\.local'
-    state: present
-
 - name: Ensure errorpage directory exists
   file:
     path: /var/www/html/errorpage
@@ -16,12 +9,11 @@
 
 - name: Copy custom error page
   copy:
-    src: ./asset/{{ item }}
-    dest: /var/www/html/errorpage
+    src: "{{ ansible_dir }}/asset/"
+    dest: /var/www/html/errorpage/
     owner: www-data
     group: www-data
     mode: "0644"
-  loop: "{{ custom_error_files }}"
 
 - name: Enable Apache2 modules
   command: a2enmod {{ item }}
@@ -78,28 +70,10 @@
     path: "/etc/letsencrypt/live/{{ domain_phish }}/fullchain.pem"
   register: cert_file
 
-- name: Obtain Let's Encrypt certificate using Manual DNS
-  command: >
-    certbot certonly
-    --manual
-    --preferred-challenges=dns
-    -d '{{ domain_phish }}' -d '*.{{ domain_phish }}'
-    --agree-tos
-    -m {{ email_certbot }}
-    --no-eff-email
-    -server https://acme-v02.api.letsencrypt.org/directory
+- name: Fail if certificate does not exist
+  fail:
+    msg: "The certificate file does not exist!"
   when: not cert_file.stat.exists
-#
-# - name: Obtain Let's Encrypt certificate using the Cloudflare DNS plugin
-#   command:
-#     cmd: >
-#       certbot certonly
-#       --dns-cloudflare
-#       --dns-cloudflare-credentials {{ path_cloudflare.ini }}
-#       --email {{ email_certbot }}
-#       --server https://acme-v02.api.letsencrypt.org/directory
-#       --agree-tos
-#       -d '*.{{ domain_phish }}' -d '{{ domain_phish }}'
 
 - name: Find the correct certificate directory
   find:
@@ -117,11 +91,17 @@
 - name: Fetch fullchain.key and priv.key
   fetch:
     src: "/etc/letsencrypt/live/{{ domain_phish }}/{{ item }}"
-    dest: ./roles/gophish/files/admin_{{ item }}
+    dest: "{{ ansible_dir }}/roles/gophish/files/admin_{{ item }}"
     flat: yes
   loop:
     - fullchain.pem
-    - privkey.pem
+    - key.pem
+
+- name: Rename key.pem to privkey.pem on local machine
+  command: 
+    cmd: mv "{{ ansible_dir }}/roles/gophish/files/admin_key.pem" "{{ ansible_dir }}/roles/gophish/files/admin_privkey.pem"
+  delegate_to: localhost
+  become: no
 
 - name: Check Apache configuration
   command: apachectl configtest
